apps/nerdd-backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nerdd-backend
  labels:
    app: nerdd-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nerdd-backend
  template:
    metadata:
      labels:
        app: nerdd-backend
    spec:
      containers:
        - name: nerdd-backend
          image: ghcr.io/molinfo-vienna/nerdd-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          args:
            - --config-name
            - production
            - ++db.host=$(DB_HOST)
            - ++db.port=$(DB_PORT)
            - ++channel.name=$(CHANNEL)
            - ++channel.broker_url=$(BROKER_URL)
            - ++channel.broker_username=$(BROKER_USERNAME)
            - ++channel.broker_password=$(BROKER_PASSWORD)
            - ++media_root=/data
            - ++s3_url=$(S3_URL)
            - ++s3_bucket=$(S3_BUCKET)
            - ++s3_access_key_id=$(S3_ACCESS_KEY_ID)
            - ++s3_secret_access_key=$(S3_SECRET_ACCESS_KEY)
          resources:
            requests:
              cpu: 500m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
      affinity:
        # distribute instances across nodes
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - nerdd-backend
              topologyKey: "kubernetes.io/hostname"
