apps/nerdd-backend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nerdd-backend-ingress
  annotations:
    haproxy.org/load-balance: "source"
    cert-manager.io/cluster-issuer: nerdd-issuer
    # increase timeout for large file uploads
    haproxy.org/timeout-server: 600s
spec:
  ingressClassName: haproxy
  rules:
    - host: nerdd.univie.ac.at
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: nerdd-backend
                port:
                  number: 8000
          - path: /websocket
            pathType: Prefix
            backend:
              service:
                name: nerdd-backend
                port:
                  number: 8000
  tls:
    - hosts:
        - nerdd.univie.ac.at
      secretName: nerdd-backend-tls
